# linkar

./: .gitignore  AGENTS.md  README.md  pixi.toml  pyproject.toml
.github/workflows/: deploy-pages.yml
.linkar/runs/simple_echo_20260327_200355/: greeting.txt
.linkar/runs/simple_echo_20260327_200434/: greeting.txt
docs/: index.html  site.css
docs/dev/: 01_vision_and_philosophy.md  02_core_concepts.md  03_system_architecture.md  04_template_specification.md  05_project_specification.md  06_param_system.md  07_param_resolution.md  08_execution_model.md  09_output_and_directory_structure.md  10_metadata_design.md  11_methods_generation.md  12_pack_system.md  13_function_system.md  14_binding_and_data_flow.md  15_cli_design.md  16_core_api_design.md  17_ephemeral_execution.md  18_reproducibility_and_versioning.md  19_example_workflows.md  20_future_roadmap.md  21_binding_specification.md  22_asset_reference_model.md  23_api_server_direction.md
examples/packs/basic/: README.md
examples/packs/binding_overrides/: README.md  binding.yaml
examples/packs/chaining/: README.md  binding.yaml
schemas/: linkar-binding.schema.json  linkar-pack.schema.json  linkar-project.schema.json  linkar-template.schema.json
src/linkar/: __init__.py  assets.py  cli.py  core.py  errors.py  mcp_server.py  mcp_tools.py  server.py  ui.py
tests/: test_cli.py  test_example_templates.py  test_mcp_tools.py  test_server.py
tests/runtime/: test_bindings.py  test_projects.py  test_runs.py
website/: astro.config.mjs  package-lock.json  package.json
website/src/: content.config.ts
(+139 files in other folders)
