[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "linkar"
version = "0.1.0"
description = "AI-native execution engine for reusable computational templates"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
  "rich>=13.7",
  "rich-click>=1.8",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
linkar = "linkar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
